--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ minimum-scale=1.0,">
                 </li>
         </ul>
     </div>
+    <section></section>
     <div class="footer_box2">
         <ul>
             <li class="text-wrapper">
