--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ minimum-scale=1.0,">
         </div>
     </section>
     <section class="about_me">
-        <div class="container_about"></div>
+        <div class="container_about">
         <div id="accordion">
             <h3>About me</h3>
             <div>
@@ -113,6 +113,7 @@ minimum-scale=1.0,">
                     <li>List item three</li>
                 </ul>
             </div>
+        </div>
         </div>
         </div>
     </section>
